--- a/shelter-project/package.json
+++ b/shelter-project/package.json
@@ -21,7 +21,10 @@
     "@angular/router": "~7.1.0",
     "angular-route": "^1.7.5",
     "core-js": "^2.5.4",
-    "moment": "^2.23.0",
+    "cors": "^2.8.5",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.24.0",
+    "mysql": "^2.17.1",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
